name:                yang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fredrik-jansson-se/yang#readme
license:             BSD3
license-file:        LICENSE
author:              Fredrik Jansson
maintainer:          fredrik.jansson.se@gmail.com
copyright:           2017 Fredrik Jansson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     YANG
                       YANG.Internal
  build-depends:       base >= 4.7 && < 5,
                       mtl,
                       parsec,
                       text
  default-language:    Haskell2010

test-suite nso-logs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       hspec,
                       yang,
                       parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fredrik-jansson-se/yang
